Amélioration de l'animation du collapse + FIX

--- a/src/components/Collapse/style.scss
+++ b/src/components/Collapse/style.scss
@@ -35,13 +35,18 @@
 
   .collapse-content {
     max-height: 0;
-    opacity: 0;
     background-color: rgba(246, 246, 246, 0.45);
-    transition:
-      max-height 0.8s ease,
-      opacity 0.4s ease;
+    transition: max-height 0.4s ease-in-out;
     padding: 0 1rem;
     overflow: hidden;
+
+    .content-wrapper {
+      opacity: 0;
+      transform: translateY(-80px);
+      transition:
+        opacity 0.4s ease-in-out,
+        transform 0.4s ease-in-out;
+    }
 
     p,
     ul {
@@ -54,9 +59,15 @@
     }
   }
 
-  &.open .collapse-content {
-    max-height: 200px;
-    opacity: 1;
+  &.open {
+    .collapse-content {
+      max-height: 300px;
+
+      .content-wrapper {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
   }
 }
 
@@ -85,10 +96,6 @@
       ul {
         font-size: 12px;
       }
-    }
-
-    &.open .collapse-content {
-      max-height: 260px;
     }
   }
 }
